2008-01-23  smeghead <smeghead@users.sourceforge.jp>

    * 日付入力支援のJavaScriptカレンダーの改良。前月、次月への移動をできるよう
    にした。
    * 統計情報のページにグラフを追加した。

2008-01-21  smeghead <smeghead@users.sourceforge.jp>

    * チケット一覧での状態の背景の色を変えるために、list_itemテーブルと連結し
    ていたが、別の方法で背景色を表示するようになった。不要になったので、
    list_itemテーブルとの連結を行なわないように修正。
    * レポート機能で、IDがチケットIDでなくmessage.idになっていたのをチケット
    IDが出力されるように修正。
    * レポート機能デ、投稿日時、最終更新日時、放置日数が表示されないのを修正し
    た。
    * calendar.jsで日付をyyyy-mm-ddからyyyy/mm/ddに変換する部分のバグを修正し
    た。

2008-01-20  smeghead <smeghead@users.sourceforge.jp>

    * 日付の項目のJavaScriptでの入力支援機能を作成中。前月、次月への移動はまだ
    未実装。

2008-01-19  smeghead <smeghead@users.sourceforge.jp>

    * レポート機能の追加。検索結果として表示している一覧の内容をCSVでダウンロ
    ードできるようにした。
    * 一覧での、状態の背景色を変える仕組みがあるが、同様のことを優先度や重要度
    などの一般の項目でも行ないたい。そのための仕組みを追加した。
    * 一覧での、状態、優先度の背景色の設定を、user.cssに移動した。
    * sortができなくなっていたのを修正した。

2008-01-17  smeghead <smeghead@users.sourceforge.jp>

    * 0.1.2-beta リリース

2008-01-17  smeghead <smeghead@users.sourceforge.jp>

    * 不要なファイルを削除した。missing
    * .htaccessで一般ユーザと管理ユーザのBasic認証の設定を分割した。
    * .htaccessで参照する必要の無いファイルやディレクトリを隠す設定を追加した。
    * INSTALLの.htaccess周りの設定方法を更新した。
    * ヘルプを更新した。

2008-01-15  smeghead <smeghead@users.sourceforge.jp>

    * INSTALLの更新。インストール時のFAQを追加。

2008-01-14  smeghead <smeghead@users.sourceforge.jp>

    * READMEの文字コードをUTF-8に変更。
    * INSTALLのネガティブな表記を変更した。

2008-01-13  smeghead <smeghead@users.sourceforge.jp>

    * 検索条件の日付フィールドのmaxlengthを10に指定した。

2008-01-12  smeghead <smeghead@users.sourceforge.jp>

    * 日付の項目を追加した。yyyy-mm-ddで入力してもらうという形にする。現在、管
    理ツール、チケット登録画面、チケット返信画面での日付の項目の対応を行なった。
    検索部分の対応は未。
    * e_typeという変数名をetに統一した。
    * 日付の項目の検索画面での対応を行なった。
    * チケット詳細画面の最新情報に、IDの欄を追加した。

2008-01-09  smeghead <smeghead@users.sourceforge.jp>

    * ボタンを目立つようにcssを変更した。ボタンの色、カーソルなどを変更した。

2008-01-07  smeghead <smeghead@users.sourceforge.jp>

    * JavaScriptでチェックしているというメッセージを、JavaScriptを使用できない
    環境の時のみ出力するように変更した。

2008-01-05  smeghead <smeghead@users.sourceforge.jp>
