@@ -2,6 +2,13 @@ VERSION = 0.1.2-beta
 CC = gcc
 CFLAGS= -I/usr/local/include -I. -DVERSION=\"${VERSION}\" -O3 -Wall
 LFLAGS = -L/usr/local/lib -lsqlite3 -lcgic
+OS = ${shell uname}
+ifeq ($(OS), FreeBSD)
+	LFLAGS += -liconv
+endif
+
+
+
 
 default: index.cgi admin.cgi
 
